@@ -1,3 +1,8 @@
+2009-05-05  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Predeclare functions to remove some warnings.
+	* src/roboptim-core-cfsqp-plugin.cc: Here.
+
 2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Update NEWS.
